--- a/laboratory/twitter-sport-politics/twitter-sport-politics.ipynb
+++ b/laboratory/twitter-sport-politics/twitter-sport-politics.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "import tweepy\n",
     "\n",
-    "bearer_token = \"AAAAAAAAAAAAAAAAAAAAAG5qjgEAAAAAkAH%2F7hSdqlZPNdjVUyksLVW%2BdCg%3DxbxHXyVowB6VPkigm8DFAD8UfTJ2kKFzuSsZialCu2JjfnJ4Sh\" # Twitter API\n",
+    "bearer_token = \"your bearer token\" # Twitter API\n",
     "client = tweepy.Client(bearer_token=bearer_token) # OAuth2.0 Version"
    ]
   },
@@ -50,7 +50,16 @@
    "execution_count": 2,
    "id": "a53824b3-4a81-42cc-837d-c74e293c4c34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/agustin/opt/anaconda3/envs/ml_lab/lib/python3.9/site-packages/tweepy/client.py:157: RuntimeWarning: Tweet data missing default edit_history_tweet_ids field\n",
+      "  data = [data_type(result) for result in data]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -122,27 +131,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>@FabulousHeathen @rockylee54 @Jason_Bellenger ...</td>\n",
+       "      <td>@NGB2020 @LivingWillie @KariLake @katiehobbs E...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>No More Massacres's poet Darryl Burnside (l) &amp;...</td>\n",
+       "      <td>What’s going on in the #arizonaelections is di...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>@PoliticsVerse That little milk toast really g...</td>\n",
+       "      <td>Have been spoon-fed some delightful bits of th...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>@epkingalwaystcb @RobertCahaly @CitizenFreePre...</td>\n",
+       "      <td>@RepJayapal That still wouldn't stop the crime...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Biden faces threats of railroad strike after m...</td>\n",
+       "      <td>@HawleyMO Thank you for supporting the Branson...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -152,27 +161,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
-       "      <td>Girl will make you angry for a day or even a w...</td>\n",
+       "      <td>RT @dirmaxdeyforU: A Thread of Hilarious Photo...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>RT @SeffSaid: \"If you can't do anything about ...</td>\n",
+       "      <td>RT @labtech666: First test run of a salad bowl...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>RT @elonmusk: Should Twitter offer a general a...</td>\n",
+       "      <td>RT @AdoptionsUk: Please retweet to help Indy f...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>RT @levixone: God Bless my brother all the way...</td>\n",
+       "      <td>RT @dollkura: ☆ gcash giveaway ! because it’s ...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>Can't you behave in a mature way? https://t.co...</td>\n",
+       "      <td>RT @RCD_Mallorca: 👺 Fet a 𝐒𝐨𝐧 𝐁𝐢𝐛𝐢𝐥𝐨𝐧𝐢. A casa...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -182,17 +191,17 @@
       ],
       "text/plain": [
        "                                                     X  y\n",
-       "0    @FabulousHeathen @rockylee54 @Jason_Bellenger ...  1\n",
-       "1    No More Massacres's poet Darryl Burnside (l) &...  1\n",
-       "2    @PoliticsVerse That little milk toast really g...  1\n",
-       "3    @epkingalwaystcb @RobertCahaly @CitizenFreePre...  1\n",
-       "4    Biden faces threats of railroad strike after m...  1\n",
+       "0    @NGB2020 @LivingWillie @KariLake @katiehobbs E...  1\n",
+       "1    What’s going on in the #arizonaelections is di...  1\n",
+       "2    Have been spoon-fed some delightful bits of th...  1\n",
+       "3    @RepJayapal That still wouldn't stop the crime...  1\n",
+       "4    @HawleyMO Thank you for supporting the Branson...  1\n",
        "..                                                 ... ..\n",
-       "995  Girl will make you angry for a day or even a w...  2\n",
-       "996  RT @SeffSaid: \"If you can't do anything about ...  2\n",
-       "997  RT @elonmusk: Should Twitter offer a general a...  2\n",
-       "998  RT @levixone: God Bless my brother all the way...  2\n",
-       "999  Can't you behave in a mature way? https://t.co...  2\n",
+       "995  RT @dirmaxdeyforU: A Thread of Hilarious Photo...  2\n",
+       "996  RT @labtech666: First test run of a salad bowl...  2\n",
+       "997  RT @AdoptionsUk: Please retweet to help Indy f...  2\n",
+       "998  RT @dollkura: ☆ gcash giveaway ! because it’s ...  2\n",
+       "999  RT @RCD_Mallorca: 👺 Fet a 𝐒𝐨𝐧 𝐁𝐢𝐛𝐢𝐥𝐨𝐧𝐢. A casa...  2\n",
        "\n",
        "[3000 rows x 2 columns]"
       ]
@@ -270,31 +279,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>@FabulousHeathen @rockylee54 @Jason_Bellenger ...</td>\n",
+       "      <td>@NGB2020 @LivingWillie @KariLake @katiehobbs E...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>No More Massacres's poet Darryl Burnside (l) &amp;...</td>\n",
+       "      <td>What’s going on in the #arizonaelections is di...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>@PoliticsVerse That little milk toast really g...</td>\n",
+       "      <td>Have been spoon-fed some delightful bits of th...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>@epkingalwaystcb @RobertCahaly @CitizenFreePre...</td>\n",
+       "      <td>@RepJayapal That still wouldn't stop the crime...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Biden faces threats of railroad strike after m...</td>\n",
+       "      <td>@HawleyMO Thank you for supporting the Branson...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -306,31 +315,31 @@
        "    <tr>\n",
        "      <th>2995</th>\n",
        "      <td>995</td>\n",
-       "      <td>Girl will make you angry for a day or even a w...</td>\n",
+       "      <td>RT @dirmaxdeyforU: A Thread of Hilarious Photo...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2996</th>\n",
        "      <td>996</td>\n",
-       "      <td>RT @SeffSaid: \"If you can't do anything about ...</td>\n",
+       "      <td>RT @labtech666: First test run of a salad bowl...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2997</th>\n",
        "      <td>997</td>\n",
-       "      <td>RT @elonmusk: Should Twitter offer a general a...</td>\n",
+       "      <td>RT @AdoptionsUk: Please retweet to help Indy f...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2998</th>\n",
        "      <td>998</td>\n",
-       "      <td>RT @levixone: God Bless my brother all the way...</td>\n",
+       "      <td>RT @dollkura: ☆ gcash giveaway ! because it’s ...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2999</th>\n",
        "      <td>999</td>\n",
-       "      <td>Can't you behave in a mature way? https://t.co...</td>\n",
+       "      <td>RT @RCD_Mallorca: 👺 Fet a 𝐒𝐨𝐧 𝐁𝐢𝐛𝐢𝐥𝐨𝐧𝐢. A casa...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -340,17 +349,17 @@
       ],
       "text/plain": [
        "      Unnamed: 0                                                  X  y\n",
-       "0              0  @FabulousHeathen @rockylee54 @Jason_Bellenger ...  1\n",
-       "1              1  No More Massacres's poet Darryl Burnside (l) &...  1\n",
-       "2              2  @PoliticsVerse That little milk toast really g...  1\n",
-       "3              3  @epkingalwaystcb @RobertCahaly @CitizenFreePre...  1\n",
-       "4              4  Biden faces threats of railroad strike after m...  1\n",
+       "0              0  @NGB2020 @LivingWillie @KariLake @katiehobbs E...  1\n",
+       "1              1  What’s going on in the #arizonaelections is di...  1\n",
+       "2              2  Have been spoon-fed some delightful bits of th...  1\n",
+       "3              3  @RepJayapal That still wouldn't stop the crime...  1\n",
+       "4              4  @HawleyMO Thank you for supporting the Branson...  1\n",
        "...          ...                                                ... ..\n",
-       "2995         995  Girl will make you angry for a day or even a w...  2\n",
-       "2996         996  RT @SeffSaid: \"If you can't do anything about ...  2\n",
-       "2997         997  RT @elonmusk: Should Twitter offer a general a...  2\n",
-       "2998         998  RT @levixone: God Bless my brother all the way...  2\n",
-       "2999         999  Can't you behave in a mature way? https://t.co...  2\n",
+       "2995         995  RT @dirmaxdeyforU: A Thread of Hilarious Photo...  2\n",
+       "2996         996  RT @labtech666: First test run of a salad bowl...  2\n",
+       "2997         997  RT @AdoptionsUk: Please retweet to help Indy f...  2\n",
+       "2998         998  RT @dollkura: ☆ gcash giveaway ! because it’s ...  2\n",
+       "2999         999  RT @RCD_Mallorca: 👺 Fet a 𝐒𝐨𝐧 𝐁𝐢𝐛𝐢𝐥𝐨𝐧𝐢. A casa...  2\n",
        "\n",
        "[3000 rows x 3 columns]"
       ]
@@ -433,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary size using stemming: 1578\n"
+      "Vocabulary size using stemming: 1610\n"
      ]
     }
    ],
@@ -497,8 +506,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train: (2100, 1165)\n",
-      "X_test: (900, 1165)\n"
+      "X_train: (2100, 1162)\n",
+      "X_test: (900, 1162)\n"
      ]
     }
    ],
@@ -562,7 +571,7 @@
     {
      "data": {
       "text/plain": [
-       "'Accuracy cv=1: 91.43'"
+       "'Accuracy cv=1: 92.38'"
       ]
      },
      "metadata": {},
@@ -571,7 +580,7 @@
     {
      "data": {
       "text/plain": [
-       "'Accuracy cv=2: 90.95'"
+       "'Accuracy cv=2: 92.38'"
       ]
      },
      "metadata": {},
@@ -580,7 +589,7 @@
     {
      "data": {
       "text/plain": [
-       "'Accuracy cv=3: 91.19'"
+       "'Accuracy cv=3: 90.48'"
       ]
      },
      "metadata": {},
@@ -589,7 +598,7 @@
     {
      "data": {
       "text/plain": [
-       "'Accuracy cv=4: 93.33'"
+       "'Accuracy cv=4: 93.1'"
       ]
      },
      "metadata": {},
@@ -598,7 +607,7 @@
     {
      "data": {
       "text/plain": [
-       "'Accuracy cv=5: 92.38'"
+       "'Accuracy cv=5: 90.95'"
       ]
      },
      "metadata": {},
@@ -646,7 +655,7 @@
     {
      "data": {
       "text/plain": [
-       "'Test set accuracy: 91.22'"
+       "'Test set accuracy: 92.78'"
       ]
      },
      "metadata": {},
@@ -655,9 +664,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[272,  16,   2],\n",
-       "       [ 14, 287,  13],\n",
-       "       [ 12,  22, 262]])"
+       "array([[284,  11,   5],\n",
+       "       [  9, 287,   8],\n",
+       "       [  5,  27, 264]])"
       ]
      },
      "metadata": {},
